examples/test/testpolicy10920.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10920
  namespace: namespace246
spec:
  podSelector:
    matchLabels:
      key21: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value23
      podSelector:
        matchLabels:
          key14: value23
          key5: value42
          key46: value34
